--- a/public/chat.html
+++ b/public/chat.html
@@ -20,8 +20,8 @@
    
       <div id="messages" class="chat__messages"></div>
       <div class="compose">
-        <form name="message-form">
-          <input type="text" placeholder="Message" id="input" required autocomplete="off">
+        <form name="message-form" action="./">
+          <input type="text" placeholder="Message" id="input" autocomplete="off" required>
           <input type="submit" name="send" value="Send" id="send">
     
           <input type="button" name="location" value="Send Location" id="location">
